--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header a:hover{
 /*     Showcase is an id      */
 #showcase{
   min-height: 400px;
-  background:url("https://images.unsplash.com/photo-1609702847389-b8aec1b0b929?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1563&q=80") no-repeat; 
+  background:url("https://images.unsplash.com/photo-1609702847389-b8aec1b0b929?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1563") no-repeat; 
   background-size: cover;
   background-attachment: fixed;
   text-align: center;
@@ -141,8 +141,10 @@ header a:hover{
 
 
 /*             Boxes             */
+
 #boxes{
   margin-top: 20px;
+  /* background: url('https://images.unsplash.com/photo-1525362081669-2b476bb628c3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387'); */
 }
 
 #boxes .box{
@@ -246,8 +248,19 @@ ul#services li{
     margin-top: 40px;
   }
 
+  #boxes{
+    /* margin-top: 20px; */
+    background: url('https://images.unsplash.com/photo-1525362081669-2b476bb628c3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387') no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #01fff2;
+  }
+
   #showcase {
-    background-size: center;
+    background-size: auto;
+    background: url('https://images.unsplash.com/photo-1483000805330-4eaf0a0d82da?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80');
+    background-attachment: fixed;
   }
   #newsletter button, .ask button{
     display: block;
