--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ header a:hover{
   background-size: cover;
   background-attachment: fixed;
   text-align: center;
-  color: #01fff2;
+  color: #ff0000;
 }
 
 
